--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "homepage": "https://quirky-hawking-778573.netlify.com/",
   "browserslist": {
     "production": [
       ">0.2%",
